--- a/template.yaml
+++ b/template.yaml
@@ -7,25 +7,83 @@ Description: >
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Resources:
+  # HTTP API
+  MyApi:
+    Type: AWS::Serverless::HttpApi
+    Properties:
+      # CORS configuration - this is open for development only and should be restricted in prod.
+      CorsConfiguration:
+        AllowMethods:
+          - GET
+          - POST
+          - DELETE
+          - OPTIONS
+        AllowHeaders:
+          - "*"   
+        AllowOrigins: 
+          - "*"  
+  ## S3 upload lambda function    
+  UploadRequestFunction:
+      # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+      Type: AWS::Serverless::Function 
+      Properties:
+        CodeUri: getSignedURL/
+        Handler: app.handler
+        Runtime: nodejs16.x
+        Timeout: 3
+        MemorySize: 128
+        Environment:
+          Variables:
+            UploadBucket: !Ref S3UploadBucket  
+        Policies:
+          - S3WritePolicy:
+              BucketName: !Ref S3UploadBucket
+        Events:
+          UploadAssetAPI:
+            Type: HttpApi
+            Properties:
+              Path: /uploads
+              Method: get
+              ApiId: !Ref MyApi  
+  ## S3 bucket     
+  S3UploadBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        CorsConfiguration:
+          CorsRules:
+          - AllowedHeaders:
+              - "*"
+            AllowedMethods:
+              - GET
+              - PUT
+              - HEAD
+            AllowedOrigins:
+              - "*"
+   ## face recognition lambda function 
   CallFaceRecognitionFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: call_face_recognition/
-      Handler: app.lambda_handler
-      Runtime: python3.9
-      Architectures:
-      - x86_64
-      
- S3UploadBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      CorsConfiguration:
-        CorsRules:
-        - AllowedHeaders:
-            - "*"
-          AllowedMethods:
-            - GET
-            - PUT
-            - HEAD
-          AllowedOrigins:
-            - "*"
+      CodeUri: callFaceRecognition/
+      Handler: app.handler
+      Runtime: nodejs16.x
+      Timeout: 3
+      MemorySize: 128
+      Policies:
+        - AmazonRekognitionFullAccess
+      Events:
+        AnalyzeAssetAPI:
+          Type: HttpApi
+          Properties:
+            Path: /analyze
+            Method: post
+            ApiId: !Ref MyApi 
+## Take a note of the outputs for deploying the workflow templates in this sample application
+Outputs:
+  APIendpoint:
+    Description: "HTTP API endpoint URL"
+    Value: !Sub "https://${MyApi}.execute-api.${AWS::Region}.amazonaws.com"
+  S3UploadBucketName:
+    Description: "S3 bucket for application uploads"
+    Value: !Ref 'S3UploadBucket' 
+
+
