--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,9 @@ $RECYCLE.BIN/
 */build/*
 
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
+
+# VS code history
+.lh
+
+# aws artifacts
+.aws-sam
