--- a/.gitignore
+++ b/.gitignore
@@ -244,7 +244,7 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
 # VS code history
-.lh
+#.lh
 
 # aws artifacts
-.aws-sam
+#.aws-sam
